prod_snapshot_2015-09-24_1030/objects/GL__c.object
<CustomObject>
    <description>Object To Store and Manage G/O Digital Personnel, Their Systems, Licenses, Status, etc.</description>
    <fields>
        <fullName>BlueTag__c</fullName>
        <label>BlueTag</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Desk_Id__c</fullName>
        <inlineHelpText>Something Like &quot;10W006&quot;</inlineHelpText>
        <label>Desk Id</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <label>Division</label>
        <picklist>
            <picklistValues>
                <fullName>Gannett Local</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DealChicken</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>25</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>25</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <picklist>
            <picklistValues>
                <fullName>Phoenix - 10th Floor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phoenix - 4rth Floor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deer Valley</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scottsdale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nashville</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Work From Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DealChicken - Field</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Mobile_Phone__c</fullName>
        <label>Mobile Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Need_ECHO_License__c</fullName>
        <label>Need - ECHO License</label>
        <picklist>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Need_INSL_License__c</fullName>
        <label>Need - INSL License</label>
        <picklist>
            <picklistValues>
                <fullName>Unknown</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Need_SFDC_License__c</fullName>
        <label>Need - SFDC License</label>
        <picklist>
            <picklistValues>
                <fullName>Unknown</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Need_SF_For_Outlook__c</fullName>
        <label>Need - SF For Outlook</label>
        <picklist>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Office_Phone__c</fullName>
        <label>Office Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>PC_Type__c</fullName>
        <label>PC Status</label>
        <picklist>
            <picklistValues>
                <fullName>Laptop WIN7 V1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Laptop WIN7 V2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Desktop XP V1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Desktop WIN7 V1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Desktop WIN7 V2</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Employ Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Termin</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>GO</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GOs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>